# daqmon

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  fluke45.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/daqmon/: __init__.py  backup.py  cli.py  config.py  config_example.json  csv_writer.py  influx.py  instrument.py  scan_example.json  scan_fluke45_example.json  scan_random_example.json  scanner.py
src/daqmon/instruments/: __init__.py  base.py  fluke45.py  hp34970a.py  random_instrument.py  registry.py
tests/: test_config.py  test_fluke45.py  test_random_instrument.py  test_scanner.py
