[project]
name = "daqmon"
version = "1.0.0"
description = "Connect your HP 34970A to InfluxDB and monitor your data acquisition in real-time."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Andrew Meares", email = "mearesinfo@gmail.com" }
]
dependencies = [
    "pyserial>=3.5",
    "influxdb-client>=1.38.0",
]

[project.scripts]
daqmon = "daqmon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daqmon"]
include = ["src/daqmon/config_example.json"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",                  # linter + formatter
    "mypy>=1.0",
]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
